# csspring

./: MANIFEST.in  Makefile  README.md  expand-macros.py  pyproject.toml  setup.py
expand/csspring/syntax/: tokenizing.py
src/csspring/: __init__.py  selectors.py  utils.py  values.py
src/csspring/syntax/: __init__.py  grammar.py  parsing.py  preprocessing.py
