[build-system]
requires = [ "setuptools", "setuptools-scm", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "csspring"
authors= [
    { name = "Armen Michaeli", email = "armen@armen.michaeli.name" },
]
description = "A CSS parsing library"
dynamic = [ "version" ]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Github = "http://github.com/amn/csspring"

[tool.setuptools_scm]
